--- a/stubs/resources/views/layout/header/_logo.antlers.html
+++ b/stubs/resources/views/layout/header/_logo.antlers.html
@@ -1,4 +1,4 @@
 <a class="flex items-center justify-center" href="{{ homepage }}">
     {{ svg src="logo" class="h-12 w-22 sm:w-24 xl:w-28" aria-hidden="true" }}
-    <span class="sr-only">Homepage</span>
+    <span class="sr-only">{{ trans:default.logo_link_text }}</span>
 </a>
