--- a/stubs/resources/views/shop/product/default/options/button.antlers.html
+++ b/stubs/resources/views/shop/product/default/options/button.antlers.html
@@ -22,7 +22,9 @@
                 x-show="disabled"
                 x-cloak
             >
-                <span class="sr-only">Out of stock</span>
+                <span class="sr-only">
+                    {{ trans:default.out_of_stock }}
+                </span>
             </span>
         </span>
 
