--- a/stubs/resources/views/layout/header/header.antlers.html
+++ b/stubs/resources/views/layout/header/header.antlers.html
@@ -13,25 +13,24 @@
             </div>
 
             <div class="flex justify-end w-full lg:w-5/12 lg:ml-auto sm:gap-2">
-
                 <x-header-button 
-                    title="Menu"
+                    title="{{ trans:default.open_main_navigation }}"
                     icon="menu"
                     \x-data="{}"
                     class="lg:hidden"
                     @click="$dispatch('drawer:open:navigation')"
                     x-bind:aria-controls="$store.navigation.id"
-                    aria-label="Open Main Navigation"
+                    aria-label="{{ trans:default.open_main_navigation }}"
                 />
 
                 <x-header-button 
-                    title="{{ 'Search' | trans }}" 
+                    title="{{ trans:default.search }}" 
                     icon="search"
                     x-data=""
                     @click="$dispatch('drawer:open:livesearch')"
                     class="flex-col h-auto p-2 btn btn-ghost min-w-11 sm:min-w-16"
                     id="search-trigger"
-                    aria-label="{{ 'Search' | trans }}" 
+                    aria-label="{{ trans:default.search }}" 
                 />
 
                 <div class="flex justify-center lg:hidden grow">
