--- a/stubs/resources/views/shop/listings/default/index.antlers.html
+++ b/stubs/resources/views/shop/listings/default/index.antlers.html
@@ -14,7 +14,7 @@
         <div class="container max-w-5xl py-head">
             <p class="flex flex-col items-center justify-center py-32 text-lg text-center font-display card">
                 {{ svg src="shopping_bag" class="w-12 h-12 mb-6 fill-slate-500" aria-hidden="true" }}
-                No products match your selection.
+                {{ trans:catalog.no_results_text }}
             </p>
         </div>
     {{ /if }}
