--- a/stubs/resources/views/shop/product/default/_gallery.antlers.html
+++ b/stubs/resources/views/shop/product/default/_gallery.antlers.html
@@ -26,7 +26,7 @@
                 </div>
             {{ /gallery }}
         </div>
-        <x-button label="Open in full" variant="secondary" icon="open_in_full" class="absolute z-10 hidden top-4 right-4 md:inline-flex btn-round btn-sm" @click="openLightbox()" />
+        <x-button label="{{ trans:default.open_in_full }}" variant="secondary" icon="open_in_full" class="absolute z-10 hidden top-4 right-4 md:inline-flex btn-round btn-sm" @click="openLightbox()" />
     </div>
     <div class="relative bottom-0 top-auto opacity-30 swiper-pagination md:hidden" data-swiper-pagination="{{ $sliderId }}"></div>
 
@@ -84,7 +84,7 @@
             <button type="button" class="opacity-0 swiper-button-prev btn btn-secondary btn-round btn-lg after:hidden lg:opacity-100" data-swiper-prev="{{ $lightboxId }}">
                 {{ svg src="arrow_left_alt" class="size-6" }}
             </button>
-            <x-button label="Close" icon="close" variant="secondary" @click="closeLightbox()" class="absolute z-30 btn-round top-5 right-5"/>
+            <x-button label="{{ trans:default.close }}" icon="close" variant="secondary" @click="closeLightbox()" class="absolute z-30 btn-round top-5 right-5" />
         </div>
     </div>
 </div>
