--- a/stubs/resources/views/shop/product/default/options/color.antlers.html
+++ b/stubs/resources/views/shop/product/default/options/color.antlers.html
@@ -26,6 +26,9 @@
                 x-show="disabled"
                 x-cloak
             >
+                <span class="sr-only">
+                    {{ trans:default.out_of_stock }}
+                </span>
             </span>
         </span>
     </span>
