--- a/stubs/resources/views/customer/profile/profile/index.antlers.html
+++ b/stubs/resources/views/customer/profile/profile/index.antlers.html
@@ -10,7 +10,7 @@
 
     {{ if passwordResetSuccess == true }}
         <x-alert variant="success" class="mb-10">
-            {{ trans:auth.recover_reset_success_message }}
+            {{ trans:forms.message.success.password_reset }}
         </x-alert>
     {{ /if }}
 
